--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
             </div>
             <div>
               <h2 class="cu-h2-work">myBurgerLab</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">myBurgerLab’s Retro Rebranding</p>
               <div class="cu-card-details">
                 <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">myBurgerLab isn't just about burgers 
                   anymore — it's where happy memories are born. A rebranding strategy, 
@@ -132,12 +131,13 @@
             </div>
             <div>
               <h2 class="cu-h2-work">UOB YOLO</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">UOB YOLO Card TVC Launch Campaign</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">&#x27;You only live once&#x27;, hence live life to
-                the fullest with the card that gives you cash back whenever you eat, drink, play and repeat. UOB
-                YOLO card launch is all about giving you the freedom to spend savvily, with rebates and promotions
-                that fit your lifestyle.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">&#x27;You only live once&#x27;, hence live life to
+                  the fullest with the card that gives you cash back whenever you eat, drink, play and repeat. UOB
+                  YOLO card launch is all about giving you the freedom to spend savvily, with rebates and promotions
+                  that fit your lifestyle.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -150,11 +150,12 @@
             </div>
             <div>
               <h2 class="cu-h2-work">Toast Box</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">Toast Box Social Media and Promotion Campaign</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Toast Box, the house of nostalgic Nanyang coffee
-                and toasted bread for old school Singaporean coffee enthusiasts has made its way to Malaysia. The
-                campaign was developed to promote savoury delight to snack lovers in Klang Valley.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Toast Box, the house of nostalgic Nanyang coffee
+                  and toasted bread for old school Singaporean coffee enthusiasts has made its way to Malaysia. The
+                  campaign was developed to promote savoury delight to snack lovers in Klang Valley.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -167,15 +168,16 @@
             </div>
             <div>
               <h2 class="cu-h2-work">Jobstreet</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">Brand Social Media Tactical Campaigns</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">#EverydayGotTalents
-                Got jobs? Got talents too! With Jobstreet’s
-                #EverydayGotTalents, employers won’t have to
-                worry about finding the employee of their dreams
-                even during COVID19. With creative marketing,
-                employers can bet they’ll find ‘The One’ in
-                no time.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">#EverydayGotTalents
+                  Got jobs? Got talents too! With Jobstreet’s
+                  #EverydayGotTalents, employers won’t have to
+                  worry about finding the employee of their dreams
+                  even during COVID19. With creative marketing,
+                  employers can bet they’ll find ‘The One’ in
+                  no time.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -190,10 +192,12 @@
             </div>
             <div>
               <h2 class="cu-h2-work">CIMB</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">CIMB Mass Card Refresh Launch Campaign</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">All great things come in twos. Earn more rewards
-                with two CIMB Credit Cards. A TVC, several print ads, and a new card face design was proposed to
-                market this new feature.
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">All great things come in twos. Earn more rewards
+                  with two CIMB Credit Cards. A TVC, several print ads, and a new card face design was proposed to
+                  market this new feature.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -206,11 +210,12 @@
             </div>
             <div>
               <h2 class="cu-h2-work">UOB Mighty</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">UOB Mighty App TVC Launch Campaign</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">UOB Mighty is a hassle-free eWallet that gives you
-                more than just managing your banking needs. It’s the first mobile banking app in Malaysia that
-                incorporates banking, dining and payment all in one app.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">UOB Mighty is a hassle-free eWallet that gives you
+                  more than just managing your banking needs. It’s the first mobile banking app in Malaysia that
+                  incorporates banking, dining and payment all in one app.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -223,11 +228,12 @@
             </div>
             <div>
               <h2 class="cu-h2-work">BreadTalk</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">BreadTalk Festive Social Media Campaign</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Double up the festive joy and forgiveness with
-                snack hour&#x27;s &#x27;sweetness overload&#x27;, festive social media postings throughout the year
-                were also developed for branding purposes.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Double up the festive joy and forgiveness with
+                  snack hour&#x27;s &#x27;sweetness overload&#x27;, festive social media postings throughout the year
+                  were also developed for branding purposes.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -242,11 +248,12 @@
             </div>
             <div>
               <h2 class="cu-h2-work">Royal Selangor</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">Batman 70 Years Launch Campaign</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Royal Selangor has products under different
-                license ranges, DC Comics, Marvel and Star Wars. A series of GIFs, canvas ads, infographics and a
-                microsite were developed for consumers to choose the right gift.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Royal Selangor has products under different
+                  license ranges, DC Comics, Marvel and Star Wars. A series of GIFs, canvas ads, infographics and a
+                  microsite were developed for consumers to choose the right gift.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -259,12 +266,13 @@
             </div>
             <div>
               <h2 class="cu-h2-work">Unity Ride</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">Project57 Unity Ride Awareness Campaigns</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Projek57 Unity Ride is a nationwide, interstate
-                cycling event, led by founders Collin &amp; Sadiq and a core team of cyclists. The site played a
-                vital role in Unity Ride’s ability to execute their plans and ideas while creating a lasting impact
-                within the community.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">Projek57 Unity Ride is a nationwide, interstate
+                  cycling event, led by founders Collin &amp; Sadiq and a core team of cyclists. The site played a
+                  vital role in Unity Ride’s ability to execute their plans and ideas while creating a lasting impact
+                  within the community.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
@@ -277,15 +285,16 @@
             </div>
             <div>
               <h2 class="cu-h2-work">Jobstreet</h2>
-              <p class="cu-p-theme cu-p-align-l cu-p-desktop-hide">Brand Social Media Tactical Campaigns</p>
-              <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">#EverydayGotJobs
-                Despite COVID19, #EverydayGotJobs sets
-                job seekers’ hearts and minds at ease with its
-                assuring and motivating messaging. With the
-                campaign’s clever tips and tricks for job seekers,
-                they can be assured that a job will always
-                be out there for them.
-              </p>
+              <div class="cu-card-details">
+                <p class="cu-p-theme cu-p-align-l cu-p-mobile-hide">#EverydayGotJobs
+                  Despite COVID19, #EverydayGotJobs sets
+                  job seekers’ hearts and minds at ease with its
+                  assuring and motivating messaging. With the
+                  campaign’s clever tips and tricks for job seekers,
+                  they can be assured that a job will always
+                  be out there for them.
+                </p>
+              </div>
             </div>
             <div class="cu-card-arrow">
               <img class="cu-card-arrow-img" src="images/card-arrow-circle.svg" alt="">
