--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <!-- Case Study Section -->
   <section id="works" class="cu-sec-work">
-    <h1 class="cu-h3-work">WORK</h1>
+    <h1 class="cu-h3-work">SELECT WORK</h1>
         <div class="cu-work-row-mobile-hide">
       <div class="cu-work-card cu-work-card-appear" id="cu-work-card-1">
         <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/myburgerlab/index.html">
