--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" data-wf-page="5e3932c6b318cf250b5098ea" data-wf-site="5dfb3797c52dfd2c0c6d1383">
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=5.0" />
 
 <head>
+
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=5.0" />
+
+
 
 
   <!-- CSS Version control - Increment version number every update - Eg: v1.0.1 > v1.0.2 -->
@@ -15,6 +18,7 @@
   <link rel="preload" href="css/cu-website.css?ver=2.13" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/css/intlTelInput.min.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com" async>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" async rel="stylesheet">
 
@@ -38,8 +42,7 @@
   <script
     type="text/javascript">WebFont.load({ google: { families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic", "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script defer
-    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+ 
 
 
 
@@ -47,6 +50,18 @@
 </head>
 
 <body class="cu-body-main">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXVR6TJ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="loader">
+      <img src="images/static-black-logo.png" alt="" title="Creative Unicorn Sdn Bhd" id="loader_logo">
+      <div class="loader_bar" id="loader_bar"></div>
+    </div>
+  </div>
 
   <!-- Navigation Bar -->
   <div data-collapse="medium" data-animation="default" data-duration="400" class="cu-nav-main w-nav">
@@ -104,7 +119,10 @@
 
   <!-- Case Study Section -->
   <section id="works" class="cu-sec-work">
-    <h1 class="cu-h3-work">SELECT WORK</h1>
+    <div class="cu-h-black-div">
+      <h1 class="cu-h-black work">Select Work</h1>
+    </div>
+    <h1 class="cu-h3 work">SELECT WORK</h1>
     <div class="cu-work-row-mobile-hide">
       <div class="cu-work-card cu-work-card-appear" id="cu-work-card-1">
         <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/myburgerlab/index.html">
@@ -1991,8 +2009,6 @@
   <script src="js/cu-work.js?ver=2.08
   " type="text/javascript"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
   <script>
     document.getElementById("slider").addEventListener('wheel', function (e) {
       if (e.deltaY < 0) {
@@ -2007,6 +2023,7 @@
 
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.min.js">
+
   </script>
   <script>
 
@@ -2057,6 +2074,10 @@
   <!-- [if lte IE9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script>
   <![endif] -->
  
+
+ 
+ 
+</script>
 
 </body>
 
