--- a/index.html
+++ b/index.html
@@ -2,8 +2,97 @@
 <html lang="en" data-wf-page="5e3932c6b318cf250b5098ea" data-wf-site="5dfb3797c52dfd2c0c6d1383">
 
 <head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NXVR6TJ');</script>
+  <!-- End Google Tag Manager -->
 
+  <!-- Event snippet for CUSG Submit lead conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+  <script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof (url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+        'send_to': 'AW-870916208/YVfbCP2UhfMBEPDApJ8D',
+        'event_callback': callback
+      });
+      return false;
+    }
+  </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3YR8282EYK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3YR8282EYK');
+  </script>
+
+  <!-- CU Website FB Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '299984406845020');
+    fbq('track', 'PageView');
+    </script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=299984406845020&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Facebook Pixel Code -->
+
+
+
+  <!-- Primary Meta Tags -->
+  <title>Creative Unicorn: Award-Winning Integrated Creative Agency</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=5.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Creative Unicorn" />
+  <meta name="robots" content="All" />
+  <meta name="keywords"
+    content="top marketing firms in singapore,top digital agencies in singapore,Helping brands speak human,independent digital agency,top marketing agencies in singapore,Malaysia,Digital,Branding,Creative,Creative Design,Marketing,Social Marketing,Content,Copywriting,Web,Websites,Web Design,Agency,Services,Solution,Graphic Recording,Unicorns" />
+  <meta name="description"
+    content="People-first campaigns, from idea to execution.
+World-class campaigns, from idea to execution." />
+
+  <meta name="revisit-after" content="1 days">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:url" content="https://creativeunicorn.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Creative Unicorn: Award-Winning Integrated Creative Agency" />
+  <meta property="og:description"
+    content="People-first campaigns, from idea to execution.
+World-class campaigns, from idea to execution." />
+  <meta property="og:image" content="http://creativeunicorn.com/images/creativeunicorn-meta.jpg" />
+  <!--  Facebook Verification   -->
+  <meta name="facebook-domain-verification" content="6hrr0rq77bn8960xj757nhvxejq28z" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@CreativUnicorn" />
+  <meta name="twitter:title" content="Creative Unicorn: Award-Winning Integrated Creative Agency" />
+  <meta name="twitter:description"
+    content="People-first campaigns, from idea to execution.
+World-class campaigns, from idea to execution." />
+  <meta name="twitter:image" content="http://creativeunicorn.com/images/creativeunicorn-meta.jpg" />
 
 
 
@@ -42,7 +131,8 @@
   <script
     type="text/javascript">WebFont.load({ google: { families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic", "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
- 
+  <script defer
+    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
 
 
 
