--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
   <!-- Preloader -->
   <div id="preloader">
     <div class="loader">
-      <img src="images/static-black-logo.png" alt="" title="Creative Unicorn Sdn Bhd" id="loader_logo">
+      <img src="images/loop-dance-text-blue.gif" alt="" title="Creative Unicorn Sdn Bhd" id="loader_logo">
+      <p id="loader_text">Just a moment… We’re preparing a great experience for you!</p>
       <div class="loader_bar" id="loader_bar"></div>
     </div>
   </div>
@@ -123,7 +124,7 @@
     <h1 class="cu-h3 work">SELECT WORK</h1>
     <div class="cu-work-row-mobile-hide">
       <div class="cu-work-card cu-work-card-appear" id="cu-work-card-1">
-        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/myburgerlab/index.html">
+        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/myburgerlab/index.html" target="_blank">
           <div class="cu-work-bg-img cu-work-bg-img _10">
           </div>
           <div>
@@ -142,7 +143,7 @@
         </a>
       </div>
       <div class="cu-work-card cu-work-card-appear" id="cu-work-card-2">
-        <a data-w-id="cff52cc6-fc9f-d875-9c2e-daabecbf5b33" href="/casestudy/cimbmc.html">
+        <a data-w-id="cff52cc6-fc9f-d875-9c2e-daabecbf5b33" href="/casestudy/cimbmc.html" target="_blank">
           <div class="cu-work-bg-img cu-work-bg-img _1">
           </div>
           <div>
@@ -160,7 +161,7 @@
         </a>
       </div>
       <div class="cu-work-card cu-work-card-appear" id="cu-work-card-3">
-        <a data-w-id="13f60f58-505b-acf6-4076-70915c2a6b2b" href="/casestudy/royal.html">
+        <a data-w-id="13f60f58-505b-acf6-4076-70915c2a6b2b" href="/casestudy/royal.html" target="_blank">
           <div class="cu-work-bg-img _2">
           </div>
           <div>
@@ -178,7 +179,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-4">
-        <a data-w-id="83624628-e3c6-51bc-8f9d-85ebcd19ef7a" href="/casestudy/yolo.html">
+        <a data-w-id="83624628-e3c6-51bc-8f9d-85ebcd19ef7a" href="/casestudy/yolo.html" target="_blank">
           <div class="cu-work-bg-img _3">
           </div>
           <div>
@@ -197,7 +198,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-5">
-        <a data-w-id="22d6bc3d-8a51-7cfe-206a-26e34889b666" href="/casestudy/mighty.html">
+        <a data-w-id="22d6bc3d-8a51-7cfe-206a-26e34889b666" href="/casestudy/mighty.html" target="_blank">
           <div class="cu-work-bg-img _4">
           </div>
           <div>
@@ -215,7 +216,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-6">
-        <a data-w-id="3824f010-d2cc-0f73-41a3-46a1400e9f95" href="/casestudy/unity.html">
+        <a data-w-id="3824f010-d2cc-0f73-41a3-46a1400e9f95" href="/casestudy/unity.html" target="_blank">
           <div class="cu-work-bg-img _5">
           </div>
           <div>
@@ -234,7 +235,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-7">
-        <a data-w-id="7b3b5d06-39df-34d3-a435-1b49bdb395b6" href="/casestudy/toastbox.html">
+        <a data-w-id="7b3b5d06-39df-34d3-a435-1b49bdb395b6" href="/casestudy/toastbox.html" target="_blank">
           <div class="cu-work-bg-img _6">
           </div>
           <div>
@@ -252,7 +253,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-8">
-        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/breadtalk.html">
+        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/breadtalk.html" target="_blank">
           <div class="cu-work-bg-img _7">
           </div>
           <div>
@@ -270,7 +271,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-9">
-        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet.html">
+        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet.html" target="_blank">
           <div class="cu-work-bg-img _8">
           </div>
           <div>
@@ -292,7 +293,7 @@
         </a>
       </div>
       <div class="cu-work-card" id="cu-work-card-10">
-        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet-2.html">
+        <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet-2.html" target="_blank">
           <div class="cu-work-bg-img _9">
           </div>
           <div>
@@ -317,7 +318,7 @@
     <div class="cu-work-row-desktop-hide">
       <div class="cu-work-col">
         <div class="cu-work-card cu-work-card-appear" id="cu-work-card-1">
-          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/myburgerlab/index.html">
+          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/myburgerlab/index.html" target="_blank">
             <div class="cu-work-bg-img cu-work-bg-img _10">
             </div>
             <div class="cu-work-text-mobile">
@@ -330,7 +331,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-2">
-          <a data-w-id="cff52cc6-fc9f-d875-9c2e-daabecbf5b33" href="/casestudy/cimbmc.html">
+          <a data-w-id="cff52cc6-fc9f-d875-9c2e-daabecbf5b33" href="/casestudy/cimbmc.html" target="_blank">
             <div class="cu-work-bg-img cu-work-bg-img _1">
             </div>
             <div class="cu-work-text-mobile">
@@ -343,7 +344,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-3">
-          <a data-w-id="13f60f58-505b-acf6-4076-70915c2a6b2b" href="/casestudy/royal.html">
+          <a data-w-id="13f60f58-505b-acf6-4076-70915c2a6b2b" href="/casestudy/royal.html" target="_blank">
             <div class="cu-work-bg-img _2">
             </div>
             <div class="cu-work-text-mobile">
@@ -356,7 +357,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-4">
-          <a data-w-id="83624628-e3c6-51bc-8f9d-85ebcd19ef7a" href="/casestudy/yolo.html">
+          <a data-w-id="83624628-e3c6-51bc-8f9d-85ebcd19ef7a" href="/casestudy/yolo.html" target="_blank">
             <div class="cu-work-bg-img _3">
             </div>
             <div class="cu-work-text-mobile">
@@ -369,7 +370,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-5">
-          <a data-w-id="22d6bc3d-8a51-7cfe-206a-26e34889b666" href="/casestudy/mighty.html">
+          <a data-w-id="22d6bc3d-8a51-7cfe-206a-26e34889b666" href="/casestudy/mighty.html" target="_blank">
             <div class="cu-work-bg-img _4">
             </div>
             <div class="cu-work-text-mobile">
@@ -382,7 +383,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-6">
-          <a data-w-id="3824f010-d2cc-0f73-41a3-46a1400e9f95" href="/casestudy/unity.html">
+          <a data-w-id="3824f010-d2cc-0f73-41a3-46a1400e9f95" href="/casestudy/unity.html" target="_blank">
             <div class="cu-work-bg-img _5">
             </div>
             <div class="cu-work-text-mobile">
@@ -395,7 +396,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-7">
-          <a data-w-id="7b3b5d06-39df-34d3-a435-1b49bdb395b6" href="/casestudy/toastbox.html">
+          <a data-w-id="7b3b5d06-39df-34d3-a435-1b49bdb395b6" href="/casestudy/toastbox.html" target="_blank">
             <div class="cu-work-bg-img _6">
             </div>
             <div class="cu-work-text-mobile">
@@ -408,7 +409,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-8">
-          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/breadtalk.html">
+          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/breadtalk.html" target="_blank">
             <div class="cu-work-bg-img _7">
             </div>
             <div class="cu-work-text-mobile">
@@ -421,7 +422,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-9">
-          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet.html">
+          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet.html" target="_blank">
             <div class="cu-work-bg-img _8">
             </div>
             <div class="cu-work-text-mobile">
@@ -434,7 +435,7 @@
           </a>
         </div>
         <div class="cu-work-card" id="cu-work-card-10">
-          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet-2.html">
+          <a data-w-id="2ec9e47b-f01f-09e0-527c-4c3dc9510f5e" href="/casestudy/jobstreet-2.html" target="_blank">
             <div class="cu-work-bg-img _9">
             </div>
             <div class="cu-work-text-mobile">
@@ -1873,7 +1874,7 @@
                                 class="fab fa-waze"></i></span> </a></div>
                       </div>
                       <h5 class="cu-p-contact"><strong class="cu-p-boldtext">Creative Unicorn Pte. Ltd.
-                          (201934891W)<br>105 Cecil Street #22-11, The Octagon, Singapore 069534</strong></h5>
+                          (201934891W)<br>105 Cecil Street #22-11, The Octagon,<br> Singapore 069534</strong></h5>
                     </div>
                     <div class="cu-contact-content-wrap">
                       <div class="cu-contact-btn-wrap"><a rel="noreferrer" href="tel:+60162076750"
@@ -1904,8 +1905,8 @@
                             target="_blank" class="cu-button w-button"> <i class="fab fa-waze"></i></a>
                         </div>
                       </div>
-                      <h5><strong class="cu-p-boldtext">Creative Unicorn Sdn. Bhd. 201301044447 (1074270-P) Unit 15, Jalan USJ 3/2j,
-                          47600 Subang Jaya, Selangor Darul Ehsan</strong></h5>
+                      <h5><strong class="cu-p-boldtext">Creative Unicorn Sdn. Bhd. 201301044447 (1074270-P) <br> Unit 15, Jalan USJ 3/2j, 
+                          47600 Subang Jaya,<br> Selangor Darul Ehsan</strong></h5>
                     </div>
                     <div class="cu-contact-content-wrap">
                       <div class="cu-contact-btn-wrap"><a rel="noreferrer" href="tel:+60162076750"
