--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div id="preloader">
     <div class="loader">
       <img src="images/loop-dance-text-blue.gif" alt="" title="Creative Unicorn Sdn Bhd" id="loader_logo">
-      <p id="loader_text">Just a moment… We’re preparing a great experience for you!</p>
+      <p id="loader_text">Just a moment&hellip; We&rsquo;re preparing a great experience for you!</p>
       <div class="loader_bar" id="loader_bar"></div>
     </div>
   </div>
